--- a/TP_android/AndroidManifest.xml
+++ b/TP_android/AndroidManifest.xml
@@ -3,10 +3,25 @@
     package="com.gsi.tp_android"
     android:versionCode="1"
     android:versionName="1.0" >
-
+     <permission
+          android:name="com.gsi.TP_Android.permission.MAPS_RECEIVE"
+          android:protectionLevel="signature"/>
+        <uses-permission android:name="com.gsi.TP_Android.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+	
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:name="com.gsi.tp_android.Variables"
@@ -47,6 +62,15 @@
             android:name="com.gsi.tp_android.AndroidActivity"
             android:label="@string/title_activity_android" >
         </activity>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCWFUPOshv3jxEjmLIIpK3NMQUr4iU2iDs"/>
+
+        <activity
+            android:name="com.gsi.tp_android.MapActivity"
+            android:label="@string/title_activity_map" >
+        </activity>
+        <uses-library android:name="com.google.android.maps" /> 
     </application>
 
 </manifest>
